--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "alembic>=1.12.1",
     "psycopg2-binary>=2.9.9",
     "asyncpg>=0.29.0",
+    "greenlet>=3.0.0",
     "redis>=5.0.1",
     "aioredis>=2.0.1",
     "python-jose[cryptography]>=3.3.0",
