--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,54 +4,49 @@
   "description": "Frontend for AI-enabled language learning platform",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@mui/x-charts": "^6.0.0",
+    "@mui/x-date-pickers": "^6.10.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^3.4.0",
-    
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/x-charts": "^6.0.0",
-    "@mui/x-date-pickers": "^6.10.0",
-    
     "axios": "^1.5.0",
-    "react-query": "^3.39.0",
-    "zustand": "^4.4.0",
-    
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
+    "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
     "react-hook-form-mui": "^6.0.0",
-    "yup": "^1.3.0",
-    "@hookform/resolvers": "^3.3.0",
-    
-    "react-audio-player": "^0.17.0",
-    "react-webcam": "^7.1.0",
+    "react-query": "^3.39.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.9.0",
-    
+    "react-webcam": "^7.1.0",
     "recharts": "^2.8.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.4.0",
+    "yup": "^1.3.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
-    "@types/jest": "^29.5.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "playwright": "^1.38.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "playwright": "^1.38.0",
     "prettier": "^3.0.0"
   },
   "scripts": {
