--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "black>=23.11.0",
     "isort>=5.12.0",
     "flake8>=6.1.0",
+    "autoflake>=2.2.0",
     "mypy>=1.7.1",
     "uv>=0.1.0",
 ]
@@ -71,7 +72,7 @@ build-backend = "hatchling.build"
 packages = ["app"]
 
 [tool.black]
-line-length = 88
+line-length = 120
 target-version = ['py311']
 include = '\.pyi?$'
 extend-exclude = '''
@@ -87,12 +88,28 @@ extend-exclude = '''
   | dist
 )/
 '''
+skip-string-normalization = false
 
 [tool.isort]
 profile = "black"
+line_length = 120
 multi_line_output = 3
-line_length = 88
-known_first_party = ["app"]
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203", "W503"]
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "build",
+    "dist",
+    "*.egg-info"
+]
 
 [tool.mypy]
 python_version = "3.11"
@@ -108,6 +125,7 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+plugins = ["sqlalchemy.ext.mypy.plugin"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests", "features"]
@@ -168,4 +186,10 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
+]
+
+[dependency-groups]
+dev = [
+    "types-passlib>=1.7.7.20250602",
+    "types-python-jose>=3.5.0.20250531",
 ]
