Fix pre-commit stage name deprecation warning

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,5 +8,5 @@ repos:
         types: [python, javascript]
         pass_filenames: false
         always_run: true
-        stages: [commit]
+        stages: [pre-commit]
         description: "Run all quality checks (formatting, linting, type checking) before commit"
