Complete setup and just integration improvements
- Fixed setup.sh to use just commands and be non-interactive
- Added start-docker, stop-docker, restart-docker just commands
- Fixed database seeding with working seed_data_simple.py script
- Added pre-commit hooks for automatic quality checks
- Updated DEVELOPMENT.md with comprehensive development modes
- Fixed frontend nginx configuration and Docker port mapping
- Resolved SQLAlchemy model relationship issues
- Added modes command to explain Docker vs Local development
- Improved service health checking and user feedback

--- a/backend/justfile
+++ b/backend/justfile
@@ -155,8 +155,9 @@ migrate-rollback:
 
 # Database seeding
 seed:
-    @echo "Seeding database..."
-    uv run python scripts/seed_database.py
+    @echo "Seeding database with sample data..."
+    @echo "Note: This requires the backend to be running and database tables to exist"
+    uv run python scripts/seed_data_simple.py
 
 # Clean up generated files
 clean:
@@ -218,6 +219,8 @@ docs:
 health:
     @echo "Checking application health..."
     curl -f http://localhost:8000/health || echo "Application not running"
+
+
 
 # Docker commands
 docker-build:
