Fix security and code quality issues
- Replace hard-coded database credentials with environment variables in conftest.py
- Update OpenAI client to use modern async API in ai_service.py
- Improve database URL parsing with urllib.parse in database.py
- Add missing lessons_started attribute to User model
- Fix type checking issues and remove unused imports
- Update env.example with new test database configuration options

--- a/backend/env.example
+++ b/backend/env.example
@@ -49,3 +49,8 @@ ENABLE_METRICS=true
 # Testing Configuration
 TESTING=false
 TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/test_language_learning
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=password
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_NAME=test_language_learning
