fix: add uv venv creation before installing dependencies in GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Wait for PostgreSQL
@@ -167,6 +168,7 @@ jobs:
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Check code formatting
@@ -276,6 +278,7 @@ jobs:
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Install frontend dependencies
@@ -359,6 +362,7 @@ jobs:
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Install frontend dependencies
