--- a/.github/workflows/test-and-quality.yml
+++ b/.github/workflows/test-and-quality.yml
@@ -67,6 +67,7 @@ jobs:
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
+        uv venv
         uv pip install -e ".[dev]"
 
     - name: Install frontend dependencies
