fix: install redis-tools in GitHub Actions to enable redis-cli health checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,8 @@ jobs:
 
     - name: Wait for Redis
       run: |
+        # Install redis-tools for redis-cli
+        sudo apt-get update && sudo apt-get install -y redis-tools
         until redis-cli -h localhost ping; do
           echo "Waiting for Redis..."
           sleep 2
@@ -291,6 +293,8 @@ jobs:
           echo "Waiting for PostgreSQL..."
           sleep 2
         done
+        # Install redis-tools for redis-cli
+        sudo apt-get update && sudo apt-get install -y redis-tools
         until redis-cli -h localhost ping; do
           echo "Waiting for Redis..."
           sleep 2
@@ -375,6 +379,8 @@ jobs:
           echo "Waiting for PostgreSQL..."
           sleep 2
         done
+        # Install redis-tools for redis-cli
+        sudo apt-get update && sudo apt-get install -y redis-tools
         until redis-cli -h localhost ping; do
           echo "Waiting for Redis..."
           sleep 2
