--- a/.github/workflows/test-and-quality.yml
+++ b/.github/workflows/test-and-quality.yml
@@ -80,6 +80,8 @@ jobs:
           echo "Waiting for PostgreSQL..."
           sleep 2
         done
+        # Install redis-tools for redis-cli
+        sudo apt-get update && sudo apt-get install -y redis-tools
         until redis-cli -h localhost ping; do
           echo "Waiting for Redis..."
           sleep 2
